--- a/styles/nav.css
+++ b/styles/nav.css
@@ -19,19 +19,27 @@
      align-items: center;
     background-image: linear-gradient(#5ac3b9b9, rgba(65, 179, 169, 0.769));
      box-shadow: 8px 9px 20px rgba(0, 0, 0, 0.649);
+      font-family: "Comic Relief", system-ui;
+     font-weight: 700;
     
  }
 
  .nav-bar h2 {
      margin-left: 35px;
+      font-family: "Comic Relief", system-ui;
+     font-weight: 800;
  }
 
  .nav-bar ul {
      margin-right: 45px;
+      font-family: "Comic Relief", system-ui;
+     font-weight: 800;
  }
 
  .brand {
      font-size: 40px;
+      font-family: "Comic Relief", system-ui;
+     font-weight: 800;
  }
 
  .color {
@@ -92,5 +100,17 @@
          margin-left: 5px;
          flex-direction: column;
      }
+
+     .nav-bar h2 {
+     margin-left: 25px;
+ }
+
+ .nav-bar ul {
+     margin-right: 35px;
+ }
+
+ .brand {
+     font-size: 30px;
+ }
 
     }
